gasyncresult: document that NULL GAsyncReadyCallback is allowed

https://bugzilla.gnome.org/show_bug.cgi?id=653484